--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <span class="icon-bar"></span>
       </button>
       <a class="navbar-brand" href="#">Brand</a>
-        <img src="images/LetterK.jpg" alt="Karlena's Brand">
+        <img src="images/Moi.jpg" alt="Karlena's Brand">
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
