--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 <!-- Jumbotron -->
 <div class="jumbotron">
   <div class="container">
-  <marquee><h1>The Wonders of Wanderlust</h1></marquee>
+  <marquee><h1>Hello World!</h1></marquee>
 </div>
 </div>
 
